# Aetherium-Syndicate-Inspectra

./: .env.example  .gitignore  .lighthouserc.json  README.md  app-home.html  bench_aether_extreme.py  canonical_registry.json  creator-studio.html  enterprise_windows.html  github-pr-settings.html  index.html  lighthouse-budget.json  requirements.txt  semantic_duplicate_report.json  test_aetherbus_extreme.py  test_identity.py  test_tachyon.py
.idx/: dev.nix
.lighthouseci/: lhr-1770641019021.html  lhr-1770641019021.json  lhr-1770641035448.html  lhr-1770641035448.json  lhr-1770641051112.html  lhr-1770641051112.json
api_gateway/: __init__.py  aetherbus_extreme.py  main.py
backup/: dashboard.js
data/: asi.db
docs/: CODEX_AETHERIUM_V4.md  aetherevent_aetherbus_extreme_high_performance_spec_v4_3_2.md  agent_intelligence_30000_architecture.md  agent_labor_pricing_recommendation.md  ai_physiology_high_level_summary.txt  asi_high_level_summary.txt  asi_internal_system_100m_blueprint.md  asi_macro_brief_2025.txt  asi_v4.3.1_launch_readiness_infrastructure_report.md  duplicate_function_audit.md  enterprise_hardening_recommendations.md  frontend_update_log.md  high_level_summary_custom.txt  inspectra_operator_compliance_sop_and_wireframes.md  resonance_drift_detector_api_spec.md  tachyon_next_step_strategy.md  user_guide.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: check-duplicate-functions.mjs  enforce_canonical.py  seed_subscriptions.py  (+1 more)
tachyon-core/: Cargo.toml
tachyon-core/src/: lib.rs
tests/: conftest.py  (+29 more)
(+105 files in other folders)
